# django-board-example

./: Procfile  pyproject.toml
boards/: admin.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
boards/migrations/: 0001_initial.py
example/: settings.py  urls.py
